# chik_puzzles

./: .gitignore  Cargo.toml  README.md  build.rs  generate_chialisp_constants.py  generate_chiklisp_constants.py  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  cargo-tests.yml  python-tests.yml
chia_puzzles/: load_clvm.py  lock.py  manage_clvm.py  programs.py
chia_puzzles/.chia_cache/: manage_clvm.json
chia_puzzles/puzzles/: tails.py
chia_puzzles/tests/: test_loads.py
chia_puzzles_py/: manage_clvm.py  programs.py
chia_puzzles_py/tests/: test_import.py
puzzles/cat_puzzles/: everything_with_singleton.clsp
puzzles/mips_puzzles/member_puzzles/: passkey_member.clsp  passkey_member.clsp.hex  passkey_member_puzzle_assert.clsp  passkey_member_puzzle_assert.clsp.hex
puzzles/mips_puzzles/restriction_puzzles/: enforce_dpuz_wrappers.clsp
puzzles/mips_puzzles/restriction_puzzles/wrappers/: force_1_of_2_w_restricted_variable.clsp  prevent_condition_opcode.clsp  prevent_condition_opcode.clsp.hex  prevent_multiple_create_coins.clsp  prevent_multiple_create_coins.clsp.hex
puzzles/vc_puzzles/: acs_transfer_program.clsp  acs_transfer_program.clsp.hex  revocation_layer.clsp  standard_vc_backdoor_puzzle.clsp  standard_vc_revocation_puzzle.clsp
src/: lib.rs  loaded_chialisp.rs  programs.rs  puzzles.rs  tests.rs
src/chia_puzzles.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/chik_puzzles.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
