[package]
name = "chik-puzzles"
version = "0.20.2"
edition = "2021"
license = "Apache-2.0"
description = "Chik primitives needed for building wallets."
authors = ["Matt Howard <matt@chiknetwork.com>"]
homepage = "https://github.com/Chik-Network/chik_puzzles"
repository = "https://github.com/Chik-Network/chik_puzzles"

[dependencies]
hex = "0.4"
hex-literal = "0.4.1"

[build-dependencies]
hex = "0.4"
