[project]
name = "chia_puzzles_py"
version = "0.1.0"
description = "A collection of the currently deployed ChiaLisp puzzles."
readme = "README.md"
dependencies = [
    "clvm>=0.9.11",
    "clvm-tools>=0.4.10",
    "pytest>=8.3.3",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"