[project]
name = "chia_puzzles_py"
version = "0.1.0"
description = "A collection of the currently deployed ChiaLisp puzzles."
readme = "README.md"
dependencies = [
    "clvm-rs>=0.10.0",
    "clvm-tools-rs>=0.1.45",
    "pathlib>=1.0.1",
    "pytest>=8.3.3",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
